# dotfiles

./: .gitignore  .gitignore_global  .ideavimrc  .macos  .pre-commit-config.yaml  .pyproject.toml  .vimrc  .zshrc  brew.sh  git_config_addons.txt  how_to_symbolic_link.txt  pyproject.toml  pyproject_base.toml
github_actions_workflows/: release_workflow.yml
mkdocs/: mkdocs.yml
mkdocs/docs/: index.md
mkdocs/docs/api/: module1.md  module2.md  module3.md
sublime_text/: .sublime-keymap  .sublime-settings
